--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "html-react-parser": "^5.1.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
